@@ -327,6 +327,10 @@ libspectrum_sna_write( libspectrum_byte **buffer, size_t *length,
       libspectrum_snap_melodik_active( snap ) )
     *out_flags |= LIBSPECTRUM_FLAG_SNAPSHOT_MAJOR_INFO_LOSS;
 
+  /* We don't save the Specdrum state at all */
+  if( libspectrum_snap_specdrum_active( snap ) )
+    *out_flags |= LIBSPECTRUM_FLAG_SNAPSHOT_MAJOR_INFO_LOSS;
+
   ptr = *buffer;
 
   write_header( buffer, &ptr, length, snap );
